# Unshackled

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .localmind.toml  .localpilot.toml  .unshackled.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml
.cargo/: audit.toml  config.toml
.claude/: settings.json
.githooks/: pre-commit
.localmind/: localmind.sqlite
crates/localpilot-cli/: Cargo.toml  build.rs
crates/localpilot-cli/src/: context_inject.rs  doctor.rs  harness_cmd.rs  ingest_cmd.rs  key_input.rs  learning_cmd.rs  logging.rs  main.rs  mcp.rs  memory_cmd.rs  models_cmd.rs  repl.rs  rpc_cmd.rs  session_cmd.rs  trust.rs  update.rs
crates/localpilot-cli/src/snapshots/: doctor__doctor__tests__render_is_stable.snap  localpilot__doctor__tests__render_is_stable.snap  localpilot__harness_cmd__tests__status_render_is_stable.snap
crates/localpilot-cli/tests/: ask.rs  cli_help.rs  doctor.rs  export.rs  feature.rs  ingest.rs  init.rs  key_input.rs  memory.rs  print.rs
crates/localpilot-cli/tests/snapshots/: doctor.snap
crates/localpilot-config/: Cargo.toml
crates/localpilot-config/src/: error.rs  lib.rs  load.rs  schema.rs
crates/localpilot-config/tests/: config.rs
crates/localpilot-harness/: Cargo.toml
crates/localpilot-harness/src/: brief.rs  compaction.rs  decisions.rs  error.rs  hooks.rs  lib.rs  planning.rs  progress.rs  resume.rs  rules.rs  session.rs  summarizer.rs  system_prompt.rs  worker.rs
crates/localpilot-harness/src/quality/: discovery.rs  mod.rs  profiles.rs  ratify.rs  runner.rs
crates/localpilot-harness/src/snapshots/: localpilot_harness__planning__tests__intake_prompt_is_stable.snap  localpilot_harness__planning__tests__planner_prompt_is_stable.snap  localpilot_harness__worker__tests__step_trace_shape_is_stable_and_carries_no_payload.snap
crates/localpilot-harness/tests/: evals.rs  hooks.rs  lifecycle.rs  pairing.rs  resume.rs  session.rs  smart_compaction.rs
crates/localpilot-llm/: Cargo.toml
crates/localpilot-llm/proptest-regressions/: headers.txt
crates/localpilot-llm/src/: anthropic.rs  discovery.rs  error.rs  event.rs  fake.rs  headers.rs  lib.rs  openai.rs  provider.rs  registry.rs  request.rs  retry.rs
crates/localpilot-llm/tests/: http.rs  live.rs
crates/localpilot-localmind/: Cargo.toml
crates/localpilot-localmind/src/: codegraph.rs  error.rs  ingest.rs  knowledge_tool.rs  lib.rs  ops.rs  pack.rs
crates/localpilot-mcp/: Cargo.toml
crates/localpilot-mcp/src/: client.rs  error.rs  lib.rs  transport.rs
crates/localpilot-mcp/tests/: permission.rs
crates/localpilot-quota/: Cargo.toml
crates/localpilot-quota/src/: lib.rs
crates/localpilot-rpc/: Cargo.toml
crates/localpilot-rpc/src/: acp.rs  approver.rs  framing.rs  lib.rs  protocol.rs  serve.rs
crates/localpilot-rpc/tests/: acp.rs  rpc.rs
crates/localpilot-sandbox/: Cargo.toml
crates/localpilot-sandbox/src/: command.rs  lib.rs  path.rs  permission.rs  secret_path.rs
crates/localpilot-sandbox/tests/: boundary.rs
crates/localpilot-skills/: Cargo.toml
crates/localpilot-skills/src/: error.rs  lib.rs  loader.rs  manifest.rs  suggest.rs  templates.rs
crates/localpilot-store/: Cargo.toml
crates/localpilot-store/src/: atomic.rs  error.rs  events.rs  lib.rs
crates/localpilot-tools/: Cargo.toml
crates/localpilot-tools/src/: builtins.rs  error.rs  lib.rs  registry.rs  tool.rs
crates/localpilot-tools/tests/: tools.rs
crates/localpilot-tools/tests/snapshots/: tools__tool_schemas_are_stable.snap
crates/localpilot-tui/: Cargo.toml
crates/localpilot-tui/src/: app.rs  lib.rs  render.rs  state.rs
crates/localpilot-tui/tests/: render.rs
crates/localpilot-tui/tests/snapshots/: render__approval_modal_snapshot.snap  render__full_layout_snapshot.snap  render__streaming_turn_snapshot.snap  render__thinking_panel_on_does_not_occlude_the_footer.snap
crates/unshackled-cli/: Cargo.toml  build.rs
crates/unshackled-cli/src/: context_inject.rs  doctor.rs  harness_cmd.rs  key_input.rs  learning_cmd.rs  logging.rs  main.rs  mcp.rs  memory_cmd.rs  repl.rs  session_cmd.rs  update.rs
crates/unshackled-cli/src/snapshots/: doctor__doctor__tests__render_is_stable.snap  unshackled__doctor__tests__render_is_stable.snap  unshackled__harness_cmd__tests__status_render_is_stable.snap
crates/unshackled-cli/tests/: ask.rs  cli_help.rs  doctor.rs  export.rs  feature.rs  init.rs  key_input.rs  memory.rs  print.rs
crates/unshackled-cli/tests/snapshots/: doctor.snap
crates/unshackled-harness/: Cargo.toml
crates/unshackled-harness/src/: brief.rs  compaction.rs  error.rs  lib.rs  progress.rs  resume.rs  rules.rs  session.rs  system_prompt.rs  worker.rs
crates/unshackled-harness/src/quality/: discovery.rs  mod.rs  profiles.rs  ratify.rs  runner.rs
crates/unshackled-harness/tests/: evals.rs  resume.rs  session.rs
crates/unshackled-llm/: Cargo.toml
crates/unshackled-llm/src/: anthropic.rs  error.rs  event.rs  fake.rs  lib.rs  openai.rs  provider.rs  registry.rs  request.rs
crates/unshackled-llm/tests/: http.rs  live.rs
crates/unshackled-localmind/: Cargo.toml
crates/unshackled-localmind/src/: error.rs  lib.rs  ops.rs
crates/unshackled-mcp/: Cargo.toml
crates/unshackled-mcp/src/: client.rs  lib.rs  transport.rs
crates/unshackled-mcp/tests/: permission.rs
crates/unshackled-memory/: Cargo.toml
crates/unshackled-memory/src/: error.rs  lib.rs
crates/unshackled-quota/: Cargo.toml
crates/unshackled-quota/src/: lib.rs
crates/unshackled-tools/: Cargo.toml
crates/unshackled-tools/src/: builtins.rs  error.rs  lib.rs  registry.rs  tool.rs
crates/unshackled-tools/tests/: tools.rs
crates/unshackled-tools/tests/snapshots/: tools__tool_schemas_are_stable.snap
docs/: 00-clean-room.md  01-product-spec.md  02-architecture.md  03-implementation-plan.md  04-provider-contract.md  05-tool-system.md  06-harness-spec.md  07-security-and-privacy.md  08-testing.md  09-release-plan.md  (+16 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: anthropic_sse.rs  openai_sse.rs
(+162 files in other folders)
