[workspace]
members = [
    "crates/unshackled-cli",
    "crates/unshackled-core",
    "crates/unshackled-config",
    "crates/unshackled-llm",
    "crates/unshackled-tools",
    "crates/unshackled-harness",
    "crates/unshackled-tui",
    "crates/unshackled-store",
    "crates/unshackled-sandbox",
    "crates/unshackled-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["David <David@c0degeek.dev>", "Bram (C0deGeek.dev)"]
repository = "https://github.com/David-c0degeek/Unshackled-Rust"
homepage = "https://github.com/David-c0degeek/Unshackled-Rust"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "=1.0.95"
async-trait = "=0.1.83"
clap = { version = "=4.5.23", features = ["derive", "env"] }
figment = { version = "=0.10.19", features = ["env", "toml", "yaml"] }
futures = "=0.3.31"
indexmap = { version = "=2.7.0", features = ["serde"] }
reqwest = { version = "=0.12.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.134"
serde_yaml = "=0.9.34"
thiserror = "=2.0.9"
tokio = { version = "=1.42.0", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "io-util"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }
