[package]
name = "localpilot-config"
version = "0.3.0-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
figment = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
localpilot-core = { path = "../localpilot-core" }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
