[package]
name = "localpilot-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
localpilot-config = { path = "../localpilot-config" }
localpilot-core = { path = "../localpilot-core" }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
