[package]
name = "localpilot-localmind"
version = "0.3.0-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ignore = { workspace = true }
localmind-codegraph = { path = "../../external/localmind/crates/localmind-codegraph" }
localmind-core = { path = "../../external/localmind/crates/localmind-core" }
localmind-mcp = { path = "../../external/localmind/crates/localmind-mcp" }
localmind-store = { path = "../../external/localmind/crates/localmind-store" }
serde_json = { workspace = true }
thiserror = { workspace = true }
localpilot-config = { path = "../localpilot-config" }
localpilot-core = { path = "../localpilot-core" }
localpilot-store = { path = "../localpilot-store" }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
