[package]
name = "localpilot-quota"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
localpilot-config = { path = "../localpilot-config" }
localpilot-llm = { path = "../localpilot-llm" }

[dev-dependencies]
serde_json = { workspace = true }
