[package]
name = "localpilot-sandbox"
version = "0.3.0-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
