[package]
name = "localpilot-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
localpilot-config = { path = "../localpilot-config" }
localpilot-core = { path = "../localpilot-core" }
localpilot-sandbox = { path = "../localpilot-sandbox" }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
