[package]
name = "localpilot-tui"
version = "0.3.0-beta.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# The testable UI crate renders with ratatui's backend-agnostic widgets and a
# TestBackend; the real terminal backend (crossterm) and the tui-textarea input
# widget live in the CLI's terminal driver, keeping this crate's tests free of
# the terminal-init code that crashes the harness on some local toolchains.
ratatui = { workspace = true, default-features = false }
# The transcript is a scrollable view with its own scrollbar; backend-agnostic,
# so it does not pull crossterm into this testable UI crate.
tui-scrollview = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
