[package]
name = "unshackled"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "unshackled"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }
unshackled-harness = { path = "../unshackled-harness" }
unshackled-llm = { path = "../unshackled-llm" }
unshackled-memory = { path = "../unshackled-memory" }
unshackled-recovery = { path = "../unshackled-recovery" }
unshackled-sandbox = { path = "../unshackled-sandbox" }
unshackled-store = { path = "../unshackled-store" }
unshackled-tools = { path = "../unshackled-tools" }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

