[package]
name = "unshackled"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "unshackled"
path = "src/main.rs"

[features]
# The interactive `chat` REPL links crossterm. It is opt-in so the default
# binary (doctor/ask/print/harness/memory/export) links no terminal backend and
# runs on every toolchain. Release and CI builds enable it.
default = []
tui = ["dep:crossterm", "dep:ratatui", "dep:unshackled-tui"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = { workspace = true, optional = true }
futures.workspace = true
ratatui = { workspace = true, features = ["crossterm"], optional = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }
unshackled-harness = { path = "../unshackled-harness" }
unshackled-llm = { path = "../unshackled-llm" }
unshackled-mcp = { path = "../unshackled-mcp" }
unshackled-memory = { path = "../unshackled-memory" }
unshackled-quota = { path = "../unshackled-quota" }
unshackled-recovery = { path = "../unshackled-recovery" }
unshackled-sandbox = { path = "../unshackled-sandbox" }
unshackled-store = { path = "../unshackled-store" }
unshackled-tools = { path = "../unshackled-tools" }
unshackled-tui = { path = "../unshackled-tui", optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

