[package]
name = "unshackled-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }
unshackled-llm = { path = "../unshackled-llm" }
unshackled-recovery = { path = "../unshackled-recovery" }
unshackled-sandbox = { path = "../unshackled-sandbox" }
unshackled-store = { path = "../unshackled-store" }
unshackled-tools = { path = "../unshackled-tools" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
