[package]
name = "unshackled-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
