[package]
name = "unshackled-localmind"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
localmind-core = { path = "../../external/localmind/crates/localmind-core" }
localmind-store = { path = "../../external/localmind/crates/localmind-store" }
thiserror = { workspace = true }
unshackled-core = { path = "../unshackled-core" }
unshackled-store = { path = "../unshackled-store" }

[dev-dependencies]
tempfile = { workspace = true }
