[package]
name = "unshackled-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unshackled-sandbox = { path = "../unshackled-sandbox" }
unshackled-tools = { path = "../unshackled-tools" }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
unshackled-core = { path = "../unshackled-core" }
