[package]
name = "unshackled-quota"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
unshackled-config = { path = "../unshackled-config" }
unshackled-llm = { path = "../unshackled-llm" }

[dev-dependencies]
serde_json = { workspace = true }
