[package]
name = "unshackled-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unshackled-config = { path = "../unshackled-config" }
unshackled-core = { path = "../unshackled-core" }
unshackled-sandbox = { path = "../unshackled-sandbox" }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
